Removed workaround for ControlsFX problem that has been fixed